Update 133. Clone Graph.MD

--- a/Code/133. Clone Graph/133. Clone Graph.MD
+++ b/Code/133. Clone Graph/133. Clone Graph.MD
@@ -86,8 +86,8 @@ public:
         queue<Node*> q;
         q.push(node);
         while(!q.empty()){
-            Node* v1 = q.front();q.pop();           
-            Node* v1 = q.front();q.pop();
+            Node* v1 = q.front();q.pop();          
+            
             // cout << v1->val <<" " ;          
             for(int i =0;i< v1->neighbors.size(); i++){
                 Node* cur = v1->neighbors[i];               
@@ -101,4 +101,43 @@ public:
         return res;
     }
 };
+```
+
+``` JS
+// OJ: https://leetcode.com/problems/clone-graph/
+// Author: Bao
+// Time: O()
+// Space: O()
+/**
+ * // Definition for a Node.
+ * function Node(val, neighbors) {
+ *    this.val = val === undefined ? 0 : val;
+ *    this.neighbors = neighbors === undefined ? [] : neighbors;
+ * };
+ */
+/**
+ * @param {Node} node
+ * @return {Node}
+ */
+var cloneGraph = function(node) {
+    if(!node) return node;
+    let res = new Node(node.val,[]);
+    let m = new Map(); 
+    m.set(node,res);    
+    let q = [];
+    q.push(node);
+    while(q.length){
+        let cur = q.shift();
+        for(let i =0;i<cur.neighbors.length;i++){
+            let neighbor = cur.neighbors[i];
+            if(!m.has(neighbor)){
+                m.set(neighbor,new Node(neighbor.val,[]));
+                q.push(neighbor);
+            }
+            m.get(cur).neighbors.push(m.get(neighbor))
+        }
+    }
+    return m.get(node);
+};
+            
 ```
