--- a/Code/695. Max Area of Island/695. Max Area of Island.MD
+++ b/Code/695. Max Area of Island/695. Max Area of Island.MD
@@ -90,3 +90,61 @@ public:
     }
 };
 ```
+
+## Solution 2.
+
+```cpp
+// OJ: https://leetcode.com/problems/max-area-of-island/
+// Author: Bao
+// Time: O()
+// Space: O()
+class Solution {
+public:
+    void bfs(vector<vector<int>>& grid , int y ,int x, vector<vector<int>>& visited,int& area){
+        int dy[4] = {1,0,-1,0};
+        int dx[4] = {0,1,0,-1};
+        
+        vector<pair<int,int>> s[2];
+        int h= 1,t=0;
+        s[h].push_back({y,x});
+        while(!s[h].empty()){
+            s[t].clear();
+            for(int i=0;i<s[h].size();i++){
+                auto v1 = s[h][i];
+                for(int i =0;i<4;i++){
+                    int y1 = v1.first + dy[i];
+                    int x1 = v1.second + dx[i];
+                    if(y1<0 || x1<0 || y1 >=grid.size() || x1>=grid[0].size()) continue;
+                    if(grid[y1][x1]==0) continue;
+                    if(visited[y1][x1]==1)continue;
+                    visited[y1][x1] = 1;
+                    area++;
+                    s[t].push_back({y1,x1});                
+                }
+            }
+            h=1-h;
+            t=1-t;            
+        }
+    }
+    int maxAreaOfIsland(vector<vector<int>>& grid) {
+        int res = 0;
+        int rows =  grid.size();
+        int cols = grid[0].size();
+        vector<vector<int>> visited;
+        vector<int> r;
+        for(int i =0;i<cols;i++) r.push_back(0);
+        for(int i =0;i<rows;i++) visited.push_back(r);
+        for(int i =0;i<rows;i++){
+            for(int j=0;j<cols;j++){
+                if(visited[i][j]==1) continue;                
+                if(grid[i][j]==0) continue;
+                visited[i][j]=1;
+                int area = 1;
+                bfs(grid,i,j,visited,area);
+                res = max(res,area);
+            }
+        }
+        return res;
+    }
+};
+```
