--- a/Code/323. Number of Connected Components in an Undirected Graph/323. Number of Connected Components in an Undirected Graph.md
+++ b/Code/323. Number of Connected Components in an Undirected Graph/323. Number of Connected Components in an Undirected Graph.md
@@ -140,3 +140,47 @@ public:
 };
 
 ```
+
+## solution 2 : uniuon find
+
+```cpp
+# OJ: https://leetcode.com/problems/number-of-connected-components-in-an-undirected-graph/
+# Author: Duy Tran
+# Time: O()
+# Space: O()
+
+class Solution {
+public:
+    int find(int i , vector<int>&  p){
+        while(i!=p[i]){
+            p[i]= p[p[i]];
+            i = p[i];
+        }
+        return i;
+    }
+    void dounion(int i,int j , vector<int>& p, vector<int>& rank, int& res){
+        int pi = find(i,p);
+        int pj = find(j,p);
+        if(pi==pj) return;
+        res--;
+        if(rank[pi]<rank[pj]) swap(pi,pj);
+        rank[pi]+= rank[pj];
+        p[pj]=p[pi];
+    }
+    int countComponents(int n, vector<vector<int>>& edges) {
+        vector<int> p;
+        vector<int> rank;
+        for(int i=0;i<n;i++){
+            p.push_back(i);
+            rank.push_back(1);
+        }
+        int res = n;
+        for(auto edge:edges){
+            int h = edge[0];
+            int t = edge[1];
+            dounion(h,t,p,rank,res);
+        }
+        return res;
+    }
+};
+```
