--- a/Code/242. Valid Anagram/242. Valid Anagram.MD
+++ b/Code/242. Valid Anagram/242. Valid Anagram.MD
@@ -100,3 +100,25 @@ public:
         
 
 ```
+
+## solution 3: int array 26 char
+
+``` cpp
+// OJ: https://leetcode.com/problems/valid-anagram/
+// Author: Bao
+// Time: O()
+// Space: O()
+class Solution {
+public:
+    bool isAnagram(string s, string t) {
+        int m[26]={};
+        for(char chr:s)m[chr-'a']++;
+        for(char chr:t)m[chr-'a']--;
+        for(auto i:m){
+            if(i) return false;
+        }
+        return true;
+    }
+};
+```
+
